--- a/docs/xrefmap.yml
+++ b/docs/xrefmap.yml
@@ -1834,6 +1834,94 @@ references:
   isSpec: "True"
   fullName: Altazion.ECommerce.Controls.MagasinAssocieVille.OnPreRender
   nameWithType: MagasinAssocieVille.OnPreRender
+- uid: Altazion.ECommerce.Controls.MarqueDescription
+  name: MarqueDescription
+  href: api/Altazion.ECommerce.Controls.MarqueDescription.html
+  commentId: T:Altazion.ECommerce.Controls.MarqueDescription
+  fullName: Altazion.ECommerce.Controls.MarqueDescription
+  nameWithType: MarqueDescription
+- uid: Altazion.ECommerce.Controls.MarqueDescription.TextFormat
+  name: TextFormat
+  href: api/Altazion.ECommerce.Controls.MarqueDescription.html#Altazion_ECommerce_Controls_MarqueDescription_TextFormat
+  commentId: P:Altazion.ECommerce.Controls.MarqueDescription.TextFormat
+  fullName: Altazion.ECommerce.Controls.MarqueDescription.TextFormat
+  nameWithType: MarqueDescription.TextFormat
+- uid: Altazion.ECommerce.Controls.MarqueDescription.TextFormat*
+  name: TextFormat
+  href: api/Altazion.ECommerce.Controls.MarqueDescription.html#Altazion_ECommerce_Controls_MarqueDescription_TextFormat_
+  commentId: Overload:Altazion.ECommerce.Controls.MarqueDescription.TextFormat
+  isSpec: "True"
+  fullName: Altazion.ECommerce.Controls.MarqueDescription.TextFormat
+  nameWithType: MarqueDescription.TextFormat
+- uid: Altazion.ECommerce.Controls.MarqueLink
+  name: MarqueLink
+  href: api/Altazion.ECommerce.Controls.MarqueLink.html
+  commentId: T:Altazion.ECommerce.Controls.MarqueLink
+  fullName: Altazion.ECommerce.Controls.MarqueLink
+  nameWithType: MarqueLink
+- uid: Altazion.ECommerce.Controls.MarqueLink.#ctor
+  name: MarqueLink()
+  href: api/Altazion.ECommerce.Controls.MarqueLink.html#Altazion_ECommerce_Controls_MarqueLink__ctor
+  commentId: M:Altazion.ECommerce.Controls.MarqueLink.#ctor
+  fullName: Altazion.ECommerce.Controls.MarqueLink.MarqueLink()
+  nameWithType: MarqueLink.MarqueLink()
+- uid: Altazion.ECommerce.Controls.MarqueLink.#ctor*
+  name: MarqueLink
+  href: api/Altazion.ECommerce.Controls.MarqueLink.html#Altazion_ECommerce_Controls_MarqueLink__ctor_
+  commentId: Overload:Altazion.ECommerce.Controls.MarqueLink.#ctor
+  isSpec: "True"
+  fullName: Altazion.ECommerce.Controls.MarqueLink.MarqueLink
+  nameWithType: MarqueLink.MarqueLink
+- uid: Altazion.ECommerce.Controls.MarqueLink.TextFormat
+  name: TextFormat
+  href: api/Altazion.ECommerce.Controls.MarqueLink.html#Altazion_ECommerce_Controls_MarqueLink_TextFormat
+  commentId: P:Altazion.ECommerce.Controls.MarqueLink.TextFormat
+  fullName: Altazion.ECommerce.Controls.MarqueLink.TextFormat
+  nameWithType: MarqueLink.TextFormat
+- uid: Altazion.ECommerce.Controls.MarqueLink.TextFormat*
+  name: TextFormat
+  href: api/Altazion.ECommerce.Controls.MarqueLink.html#Altazion_ECommerce_Controls_MarqueLink_TextFormat_
+  commentId: Overload:Altazion.ECommerce.Controls.MarqueLink.TextFormat
+  isSpec: "True"
+  fullName: Altazion.ECommerce.Controls.MarqueLink.TextFormat
+  nameWithType: MarqueLink.TextFormat
+- uid: Altazion.ECommerce.Controls.MarqueLink.TypeLien
+  name: TypeLien
+  href: api/Altazion.ECommerce.Controls.MarqueLink.html#Altazion_ECommerce_Controls_MarqueLink_TypeLien
+  commentId: P:Altazion.ECommerce.Controls.MarqueLink.TypeLien
+  fullName: Altazion.ECommerce.Controls.MarqueLink.TypeLien
+  nameWithType: MarqueLink.TypeLien
+- uid: Altazion.ECommerce.Controls.MarqueLink.TypeLien*
+  name: TypeLien
+  href: api/Altazion.ECommerce.Controls.MarqueLink.html#Altazion_ECommerce_Controls_MarqueLink_TypeLien_
+  commentId: Overload:Altazion.ECommerce.Controls.MarqueLink.TypeLien
+  isSpec: "True"
+  fullName: Altazion.ECommerce.Controls.MarqueLink.TypeLien
+  nameWithType: MarqueLink.TypeLien
+- uid: Altazion.ECommerce.Controls.MarqueLink.TypeMarqueLink
+  name: MarqueLink.TypeMarqueLink
+  href: api/Altazion.ECommerce.Controls.MarqueLink.TypeMarqueLink.html
+  commentId: T:Altazion.ECommerce.Controls.MarqueLink.TypeMarqueLink
+  fullName: Altazion.ECommerce.Controls.MarqueLink.TypeMarqueLink
+  nameWithType: MarqueLink.TypeMarqueLink
+- uid: Altazion.ECommerce.Controls.MarqueLink.TypeMarqueLink.MoteurDeRecherche
+  name: MoteurDeRecherche
+  href: api/Altazion.ECommerce.Controls.MarqueLink.TypeMarqueLink.html#Altazion_ECommerce_Controls_MarqueLink_TypeMarqueLink_MoteurDeRecherche
+  commentId: F:Altazion.ECommerce.Controls.MarqueLink.TypeMarqueLink.MoteurDeRecherche
+  fullName: Altazion.ECommerce.Controls.MarqueLink.TypeMarqueLink.MoteurDeRecherche
+  nameWithType: MarqueLink.TypeMarqueLink.MoteurDeRecherche
+- uid: Altazion.ECommerce.Controls.MarqueLink.TypeMarqueLink.SiteWeb
+  name: SiteWeb
+  href: api/Altazion.ECommerce.Controls.MarqueLink.TypeMarqueLink.html#Altazion_ECommerce_Controls_MarqueLink_TypeMarqueLink_SiteWeb
+  commentId: F:Altazion.ECommerce.Controls.MarqueLink.TypeMarqueLink.SiteWeb
+  fullName: Altazion.ECommerce.Controls.MarqueLink.TypeMarqueLink.SiteWeb
+  nameWithType: MarqueLink.TypeMarqueLink.SiteWeb
+- uid: Altazion.ECommerce.Controls.MarquePanel
+  name: MarquePanel
+  href: api/Altazion.ECommerce.Controls.MarquePanel.html
+  commentId: T:Altazion.ECommerce.Controls.MarquePanel
+  fullName: Altazion.ECommerce.Controls.MarquePanel
+  nameWithType: MarquePanel
 - uid: Altazion.ECommerce.Controls.PanelCacherSiGuest
   name: PanelCacherSiGuest
   href: api/Altazion.ECommerce.Controls.PanelCacherSiGuest.html
@@ -4395,6 +4483,167 @@ references:
   isSpec: "True"
   fullName: Altazion.ECommerce.Controls.ProduitVideoList.VideoCssClass
   nameWithType: ProduitVideoList.VideoCssClass
+- uid: Altazion.ECommerce.Controls.SeoContent
+  name: SeoContent
+  href: api/Altazion.ECommerce.Controls.SeoContent.html
+  commentId: T:Altazion.ECommerce.Controls.SeoContent
+  fullName: Altazion.ECommerce.Controls.SeoContent
+  nameWithType: SeoContent
+- uid: Altazion.ECommerce.Controls.SeoContent.#ctor
+  name: SeoContent()
+  href: api/Altazion.ECommerce.Controls.SeoContent.html#Altazion_ECommerce_Controls_SeoContent__ctor
+  commentId: M:Altazion.ECommerce.Controls.SeoContent.#ctor
+  fullName: Altazion.ECommerce.Controls.SeoContent.SeoContent()
+  nameWithType: SeoContent.SeoContent()
+- uid: Altazion.ECommerce.Controls.SeoContent.#ctor*
+  name: SeoContent
+  href: api/Altazion.ECommerce.Controls.SeoContent.html#Altazion_ECommerce_Controls_SeoContent__ctor_
+  commentId: Overload:Altazion.ECommerce.Controls.SeoContent.#ctor
+  isSpec: "True"
+  fullName: Altazion.ECommerce.Controls.SeoContent.SeoContent
+  nameWithType: SeoContent.SeoContent
+- uid: Altazion.ECommerce.Controls.SeoContent.CodeEmplacement
+  name: CodeEmplacement
+  href: api/Altazion.ECommerce.Controls.SeoContent.html#Altazion_ECommerce_Controls_SeoContent_CodeEmplacement
+  commentId: P:Altazion.ECommerce.Controls.SeoContent.CodeEmplacement
+  fullName: Altazion.ECommerce.Controls.SeoContent.CodeEmplacement
+  nameWithType: SeoContent.CodeEmplacement
+- uid: Altazion.ECommerce.Controls.SeoContent.CodeEmplacement*
+  name: CodeEmplacement
+  href: api/Altazion.ECommerce.Controls.SeoContent.html#Altazion_ECommerce_Controls_SeoContent_CodeEmplacement_
+  commentId: Overload:Altazion.ECommerce.Controls.SeoContent.CodeEmplacement
+  isSpec: "True"
+  fullName: Altazion.ECommerce.Controls.SeoContent.CodeEmplacement
+  nameWithType: SeoContent.CodeEmplacement
+- uid: Altazion.ECommerce.Controls.SeoContent.DefaultContent
+  name: DefaultContent
+  href: api/Altazion.ECommerce.Controls.SeoContent.html#Altazion_ECommerce_Controls_SeoContent_DefaultContent
+  commentId: P:Altazion.ECommerce.Controls.SeoContent.DefaultContent
+  fullName: Altazion.ECommerce.Controls.SeoContent.DefaultContent
+  nameWithType: SeoContent.DefaultContent
+- uid: Altazion.ECommerce.Controls.SeoContent.DefaultContent*
+  name: DefaultContent
+  href: api/Altazion.ECommerce.Controls.SeoContent.html#Altazion_ECommerce_Controls_SeoContent_DefaultContent_
+  commentId: Overload:Altazion.ECommerce.Controls.SeoContent.DefaultContent
+  isSpec: "True"
+  fullName: Altazion.ECommerce.Controls.SeoContent.DefaultContent
+  nameWithType: SeoContent.DefaultContent
+- uid: Altazion.ECommerce.Controls.SeoContent.OnPreRender(System.EventArgs)
+  name: OnPreRender(EventArgs)
+  href: api/Altazion.ECommerce.Controls.SeoContent.html#Altazion_ECommerce_Controls_SeoContent_OnPreRender_System_EventArgs_
+  commentId: M:Altazion.ECommerce.Controls.SeoContent.OnPreRender(System.EventArgs)
+  fullName: Altazion.ECommerce.Controls.SeoContent.OnPreRender(System.EventArgs)
+  nameWithType: SeoContent.OnPreRender(EventArgs)
+- uid: Altazion.ECommerce.Controls.SeoContent.OnPreRender*
+  name: OnPreRender
+  href: api/Altazion.ECommerce.Controls.SeoContent.html#Altazion_ECommerce_Controls_SeoContent_OnPreRender_
+  commentId: Overload:Altazion.ECommerce.Controls.SeoContent.OnPreRender
+  isSpec: "True"
+  fullName: Altazion.ECommerce.Controls.SeoContent.OnPreRender
+  nameWithType: SeoContent.OnPreRender
+- uid: Altazion.ECommerce.Controls.SeoContentPanel
+  name: SeoContentPanel
+  href: api/Altazion.ECommerce.Controls.SeoContentPanel.html
+  commentId: T:Altazion.ECommerce.Controls.SeoContentPanel
+  fullName: Altazion.ECommerce.Controls.SeoContentPanel
+  nameWithType: SeoContentPanel
+- uid: Altazion.ECommerce.Controls.SeoContentPanel.#ctor
+  name: SeoContentPanel()
+  href: api/Altazion.ECommerce.Controls.SeoContentPanel.html#Altazion_ECommerce_Controls_SeoContentPanel__ctor
+  commentId: M:Altazion.ECommerce.Controls.SeoContentPanel.#ctor
+  fullName: Altazion.ECommerce.Controls.SeoContentPanel.SeoContentPanel()
+  nameWithType: SeoContentPanel.SeoContentPanel()
+- uid: Altazion.ECommerce.Controls.SeoContentPanel.#ctor*
+  name: SeoContentPanel
+  href: api/Altazion.ECommerce.Controls.SeoContentPanel.html#Altazion_ECommerce_Controls_SeoContentPanel__ctor_
+  commentId: Overload:Altazion.ECommerce.Controls.SeoContentPanel.#ctor
+  isSpec: "True"
+  fullName: Altazion.ECommerce.Controls.SeoContentPanel.SeoContentPanel
+  nameWithType: SeoContentPanel.SeoContentPanel
+- uid: Altazion.ECommerce.Controls.SeoContentPanel.CodeEmplacement
+  name: CodeEmplacement
+  href: api/Altazion.ECommerce.Controls.SeoContentPanel.html#Altazion_ECommerce_Controls_SeoContentPanel_CodeEmplacement
+  commentId: P:Altazion.ECommerce.Controls.SeoContentPanel.CodeEmplacement
+  fullName: Altazion.ECommerce.Controls.SeoContentPanel.CodeEmplacement
+  nameWithType: SeoContentPanel.CodeEmplacement
+- uid: Altazion.ECommerce.Controls.SeoContentPanel.CodeEmplacement*
+  name: CodeEmplacement
+  href: api/Altazion.ECommerce.Controls.SeoContentPanel.html#Altazion_ECommerce_Controls_SeoContentPanel_CodeEmplacement_
+  commentId: Overload:Altazion.ECommerce.Controls.SeoContentPanel.CodeEmplacement
+  isSpec: "True"
+  fullName: Altazion.ECommerce.Controls.SeoContentPanel.CodeEmplacement
+  nameWithType: SeoContentPanel.CodeEmplacement
+- uid: Altazion.ECommerce.Controls.SeoContentPanel.OnPreRender(System.EventArgs)
+  name: OnPreRender(EventArgs)
+  href: api/Altazion.ECommerce.Controls.SeoContentPanel.html#Altazion_ECommerce_Controls_SeoContentPanel_OnPreRender_System_EventArgs_
+  commentId: M:Altazion.ECommerce.Controls.SeoContentPanel.OnPreRender(System.EventArgs)
+  fullName: Altazion.ECommerce.Controls.SeoContentPanel.OnPreRender(System.EventArgs)
+  nameWithType: SeoContentPanel.OnPreRender(EventArgs)
+- uid: Altazion.ECommerce.Controls.SeoContentPanel.OnPreRender*
+  name: OnPreRender
+  href: api/Altazion.ECommerce.Controls.SeoContentPanel.html#Altazion_ECommerce_Controls_SeoContentPanel_OnPreRender_
+  commentId: Overload:Altazion.ECommerce.Controls.SeoContentPanel.OnPreRender
+  isSpec: "True"
+  fullName: Altazion.ECommerce.Controls.SeoContentPanel.OnPreRender
+  nameWithType: SeoContentPanel.OnPreRender
+- uid: Altazion.ECommerce.Controls.SeoContentTitle
+  name: SeoContentTitle
+  href: api/Altazion.ECommerce.Controls.SeoContentTitle.html
+  commentId: T:Altazion.ECommerce.Controls.SeoContentTitle
+  fullName: Altazion.ECommerce.Controls.SeoContentTitle
+  nameWithType: SeoContentTitle
+- uid: Altazion.ECommerce.Controls.SeoContentTitle.#ctor
+  name: SeoContentTitle()
+  href: api/Altazion.ECommerce.Controls.SeoContentTitle.html#Altazion_ECommerce_Controls_SeoContentTitle__ctor
+  commentId: M:Altazion.ECommerce.Controls.SeoContentTitle.#ctor
+  fullName: Altazion.ECommerce.Controls.SeoContentTitle.SeoContentTitle()
+  nameWithType: SeoContentTitle.SeoContentTitle()
+- uid: Altazion.ECommerce.Controls.SeoContentTitle.#ctor*
+  name: SeoContentTitle
+  href: api/Altazion.ECommerce.Controls.SeoContentTitle.html#Altazion_ECommerce_Controls_SeoContentTitle__ctor_
+  commentId: Overload:Altazion.ECommerce.Controls.SeoContentTitle.#ctor
+  isSpec: "True"
+  fullName: Altazion.ECommerce.Controls.SeoContentTitle.SeoContentTitle
+  nameWithType: SeoContentTitle.SeoContentTitle
+- uid: Altazion.ECommerce.Controls.SeoContentTitle.CodeEmplacement
+  name: CodeEmplacement
+  href: api/Altazion.ECommerce.Controls.SeoContentTitle.html#Altazion_ECommerce_Controls_SeoContentTitle_CodeEmplacement
+  commentId: P:Altazion.ECommerce.Controls.SeoContentTitle.CodeEmplacement
+  fullName: Altazion.ECommerce.Controls.SeoContentTitle.CodeEmplacement
+  nameWithType: SeoContentTitle.CodeEmplacement
+- uid: Altazion.ECommerce.Controls.SeoContentTitle.CodeEmplacement*
+  name: CodeEmplacement
+  href: api/Altazion.ECommerce.Controls.SeoContentTitle.html#Altazion_ECommerce_Controls_SeoContentTitle_CodeEmplacement_
+  commentId: Overload:Altazion.ECommerce.Controls.SeoContentTitle.CodeEmplacement
+  isSpec: "True"
+  fullName: Altazion.ECommerce.Controls.SeoContentTitle.CodeEmplacement
+  nameWithType: SeoContentTitle.CodeEmplacement
+- uid: Altazion.ECommerce.Controls.SeoContentTitle.DefaultContent
+  name: DefaultContent
+  href: api/Altazion.ECommerce.Controls.SeoContentTitle.html#Altazion_ECommerce_Controls_SeoContentTitle_DefaultContent
+  commentId: P:Altazion.ECommerce.Controls.SeoContentTitle.DefaultContent
+  fullName: Altazion.ECommerce.Controls.SeoContentTitle.DefaultContent
+  nameWithType: SeoContentTitle.DefaultContent
+- uid: Altazion.ECommerce.Controls.SeoContentTitle.DefaultContent*
+  name: DefaultContent
+  href: api/Altazion.ECommerce.Controls.SeoContentTitle.html#Altazion_ECommerce_Controls_SeoContentTitle_DefaultContent_
+  commentId: Overload:Altazion.ECommerce.Controls.SeoContentTitle.DefaultContent
+  isSpec: "True"
+  fullName: Altazion.ECommerce.Controls.SeoContentTitle.DefaultContent
+  nameWithType: SeoContentTitle.DefaultContent
+- uid: Altazion.ECommerce.Controls.SeoContentTitle.OnPreRender(System.EventArgs)
+  name: OnPreRender(EventArgs)
+  href: api/Altazion.ECommerce.Controls.SeoContentTitle.html#Altazion_ECommerce_Controls_SeoContentTitle_OnPreRender_System_EventArgs_
+  commentId: M:Altazion.ECommerce.Controls.SeoContentTitle.OnPreRender(System.EventArgs)
+  fullName: Altazion.ECommerce.Controls.SeoContentTitle.OnPreRender(System.EventArgs)
+  nameWithType: SeoContentTitle.OnPreRender(EventArgs)
+- uid: Altazion.ECommerce.Controls.SeoContentTitle.OnPreRender*
+  name: OnPreRender
+  href: api/Altazion.ECommerce.Controls.SeoContentTitle.html#Altazion_ECommerce_Controls_SeoContentTitle_OnPreRender_
+  commentId: Overload:Altazion.ECommerce.Controls.SeoContentTitle.OnPreRender
+  isSpec: "True"
+  fullName: Altazion.ECommerce.Controls.SeoContentTitle.OnPreRender
+  nameWithType: SeoContentTitle.OnPreRender
 - uid: Altazion.ECommerce.Controls.TousLesMagasinsListeHiddenField
   name: TousLesMagasinsListeHiddenField
   href: api/Altazion.ECommerce.Controls.TousLesMagasinsListeHiddenField.html
