--- a/Altazion.ECommerce.Controls/Altazion.ECommerce.Controls/Altazion.ECommerce.Controls.csproj
+++ b/Altazion.ECommerce.Controls/Altazion.ECommerce.Controls/Altazion.ECommerce.Controls.csproj
@@ -110,6 +110,7 @@
     <None Include=".gitignore" />
     <None Include="AltazionCommerceControls.snk" />
     <None Include="api\.gitignore" />
+    <None Include="api\controles-groupes.md" />
     <None Include="app.config" />
     <None Include="docfx.json" />
     <None Include="filterConfig.yml" />
